update google sheet append function

--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@ GEMINI_API_KEY="AIzaSyD33ovS0e5I0-G_wQYXNs8l60Tatoy4IqE"
 
 # Google Sheets Configuration
 GOOGLE_SHEETS_CREDENTIALS_FILE=credentials.json
-GOOGLE_SHEET_ID=your_google_sheet_id_here
-WORKSHEET_NAME=Leaderboard
+GOOGLE_SHEET_ID=1-msj8FHLQUfrwTWgQyHZCCZiN4uOmomHSWSfsPrO5Bw
+WORKSHEET_NAME=Sheet1
 
 # Optional: For duplicate detection
 ENABLE_DUPLICATE_CHECK=true
